--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                    como principal proposta transformar em realidade os sonhos de<br>
                    seus clientes, criando projetos personalizados, unindo a tradição<br> 
                    e a modernidade em nossos projetos</p>
-    <p id="imagem-arquitetura"> <img src="./imagem/arq.png" alt=""></p>
+    <p id="imagem-arquitetura"> <img src="./arq.png" alt=""></p>
      
     </div>
     
